feat: harden generator for 1.0 quality conventions